--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 minecraft_version=1.16.5
-penguinlib_version=1.0.0
+penguinlib_version=0.2.0-5
 mod_version=1.0.0
-
-minecraft_range=[1.16.5,1.17)
-loader_range=[33.0,)
-forge_range=[36,)
-penguinlib_range=[1.0,)
 jei_version=1.16.4:7.6.1.+
-aquaculture_version=2.1.18
